--- a/src/style/sass/_MobileOpt.scss
+++ b/src/style/sass/_MobileOpt.scss
@@ -228,9 +228,17 @@ $BGColor: rgb(31, 28, 28);
 
     .DataCenterPage{
         .About, .Support{
-            h2{
-                text-align: center;
+            ul{
+                li{
+
+                    h2{
+                        width: 90%;
+                        @include alignCenter();
+                    }
+                }
+
             }
+
         }
     }
 
@@ -564,7 +572,20 @@ $BGColor: rgb(31, 28, 28);
                         height: 55%;
                     }
                 }
+
+                #StyleChanges, #SiteUpdates{
+                    .TextBox{
+                        width: 100%;
+                        height: 40%;
+
+                        p{
+                            width: 90%;
+                        }
+                    }
+                    
+                }
             }
+
         }
     }
 
@@ -613,6 +634,16 @@ $BGColor: rgb(31, 28, 28);
 
                 height: 120vh;
             }
+    
+            .Footer{
+                .Questioner{
+                    .BoxyBox{
+                        ul{
+                            width: 40%;
+                        }
+                    }
+                }
+            }
         }
 
     }
@@ -623,6 +654,25 @@ $BGColor: rgb(31, 28, 28);
                 .RightBoxS3Final{
                     .ButtonsBox{
                         flex-direction: column;
+                    }
+                }
+            }
+        }
+    }
+
+    .DataCenterPage{
+        .DataContainer{
+            .Support{
+                li{
+                    form{
+                        .BottomForm{
+                            flex-direction: row;
+
+                            .textAreaThingy{
+                                width: 50%;
+                                height: 100px;
+                            }
+                        }
                     }
                 }
             }
